<resources>
    <string name="app_name">HappyPlaces</string>
    <string name="add_a_place">Add a place</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="please_wait">Please wait…</string>
    <string name="view_on_map">View on map</string>
    <string name="apiKey"></string>
    <string name="current_location">Current location</string>
</resources>